[package]
name = "pallet-migrations-examples-runtime"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Example runtime for migrations"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { version = "4.0.0-dev", path = "../../../support" }
frame-system = { version = "4.0.0-dev", path = "../../../system" }
pallet-migrations = { version = "1.0.0", path = "../.." }
pallet-migrations-examples-simple = { version = "0.1.0", path = "../pallets/simple" }
parity-scale-codec = "3.6.5"
scale-info = "2.10.0"
