[package]
name = "pallet-migrations-examples-runtime"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Example runtime for migrations"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { path = "../../../../utils/wasm-builder", optional = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false }
frame-support = { version = "4.0.0-dev", path = "../../../support", default-features = false }
frame-system = { version = "4.0.0-dev", path = "../../../system", default-features = false }
pallet-migrations = { version = "1.0.0", path = "../..", default-features = false }
pallet-migrations-examples-simple = { version = "0.1.0", path = "../pallets/simple", default-features = false }
scale-info = { version = "2.10.0", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-migrations-examples-simple/std",
	"pallet-migrations/std",
	"scale-info/std",
]
